fix pwa installation on ios

--- a/public/styles/components/_home.scss
+++ b/public/styles/components/_home.scss
@@ -52,3 +52,27 @@
     margin: 0 auto;
   }
 }
+
+.add-app {
+  width: 90vw;
+  max-width: 500px;
+  background: #101114;
+  border-radius: 5px;
+  padding: 1rem;
+  text-align: center;
+  font-size: 0.8em;
+  position: fixed;
+  bottom: 4rem;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  &.active {
+    opacity: 1;
+    visibility: visible;
+  }
+  img {
+    margin: 0 0.25rem;
+  }
+}
